# jp-estat-to-sql

./: .gitignore  Cargo.toml  EXAMPLES_DB_CSV.md  README.md
.github/workflows/: release.yml
misc/: mesh_to_vector.sh  to_vector.sh
src/: areamap.rs  db_csv.rs  download.rs  estat_api.rs  gdal.rs  main.rs  mesh.rs  mesh_csv.rs  mesh_info.rs  mesh_stats.json  mesh_tile.rs  unzip.rs
src/snapshots/: jp_estat_util__db_csv__tests__extracts_code_and_text_fields_for_table_rows.snap  jp_estat_util__db_csv__tests__normalize_singleton_dimension_objects.snap  jp_estat_util__db_csv__tests__normalizes_observations_with_missing_optional_dimensions.snap
tests/fixtures/db_csv/: data_missing_optional_dimensions.json  meta_singleton.json
