[package]
name = "jp-estat-to-sql"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["tokio"] }
km-to-sql = "0.1.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["stream"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
url = "2.5.4"
