[package]
name = "jp-estat-to-sql"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
csv = "1.3.1"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
futures = "0.3.31"
indicatif = { version = "0.17.11", features = ["tokio"] }
jismesh = "0.1"
km-to-sql = "0.1.1"
lazy_static = "1.4"
mesh-data-tile = "0.1.1"
ndarray = "0.16.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
url = "2.5.4"
